--- a/css/style.css
+++ b/css/style.css
@@ -235,12 +235,75 @@ a{
 .mobile {
   display: flex;
   align-items: center;     
-  /* justify-content: space-between;  */
-  /* gap: 40px;  */
+  justify-content: space-between; 
+  gap: 40px; 
   position: relative;
   margin-bottom: 71px;
 }
 .mobile .main-img{
   position: relative;
   right: -100px;
+}
+.main-cards{
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  margin-bottom: 70px;
+}
+
+.cards {
+  background-color: var(--card-bg);
+}
+.cards-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 70px 0;
+}
+.card-wrapper{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 3px;
+  background-color: var(--white);
+  padding: 17px;
+}
+.card-title {
+  color: var(--card-text);
+  font-family: Roboto;
+  line-height: 30px;
+  padding-bottom: 15px;
+}
+.card-content {
+  color: var(--card-text);
+font-family: Roboto;
+font-size: 14px;
+line-height: 18px;
+padding-bottom: 10px;
+}
+span{
+  color: #489FD9;
+  font-family: Roboto;
+  font-size: 19px;
+  line-height: 22px;
+}
+.chance{
+  color: #C7C5C5;
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 18px;
+}
+.card button {
+  padding: 10px 44px;
+}
+.card-last-title{
+  color: #333;
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 22px;
+  padding-top: 19px;
 }
